# snap

./: .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  update.js  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  styles.pcss
src-tauri/: Cargo.toml  info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: accessibility_element.rs  haptic_feedback.rs  mod.rs  nscolor.rs  nsevent.rs  nsscreen.rs  nswindow.rs
src-tauri/src/data/: frame.rs  window_info.rs
src-tauri/src/extensions/: accessibility_elements.rs  event_monitor.rs  helpers.rs  mod.rs  notification.rs  nscolor.rs  windows.rs
src-tauri/src/patch_window/: overlay.rs  statusbar.rs
src/applications/: Overlay.svelte  Settings.svelte  Statusbar.svelte
src/components/button/: Button.svelte
src/components/checkbox/: Checkbox.svelte
src/components/fancy-zone-rect/: FancyZoneRect.svelte  index.ts
src/components/form-group/: FormGroup.svelte  index.ts
src/components/frame-position/: FramePosition.svelte  index.ts
src/components/icon/: Icon.svelte
src/components/input-number/: InputNumber.svelte  index.ts
src/components/placeholder/: Placeholder.svelte  index.ts
src/components/range-slider/: RangeSlider.svelte
src/components/segmented-control/: SegmentedControl.svelte  SegmentedControlButton.svelte  index.ts
src/components/selectable-card/: SelectableCard.svelte  index.ts
src/components/shortcut-recorder/: ShortcutRecorder.svelte
src/components/snowfall/: Snowfall.svelte  index.ts
src/components/switch/: Switch.svelte
src/components/titlebar/: Titlebar.svelte
src/helpers/: events.ts  store.ts
src/models/: animation.ts
src/models/cocoa/: accessibility-element.ts  nscolor.ts  nsevent.ts  nshaptic-feedback.ts  nsscreen.ts  nswindow.ts  spaces.ts
src/models/geometry/: alignment.ts  frame.ts
src/models/mapping/: index.ts
src/models/snapping/: index.ts
src/stores/fancy-zones/: index.ts
src/stores/mapping/: index.ts
src/stores/screen/: index.ts
src/stores/settings/: index.ts  mapping-actions.ts
src/stores/snapping/: index.ts
src/stores/spaces/: ignored-apps.ts  index.ts
src/stores/statusbar/: caffeinate.ts  index.ts
src/stores/system/: index.ts
src/stores/theme/: index.ts
src/stores/window-manager/: index.ts
src/views/: index.ts
src/views/fancy-zones/: FancyZones.svelte  index.ts
src/views/settings-commands/: SettingsCommands.svelte  index.ts
(+21 files in other folders)
