[package]
name = "Snap"
version = "1.2.0"
description = "Macos window manager app"
authors = ["freethinkel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
] }
tauri-plugin-shell = "2.0.0-beta"
serde_json = "1.0"
# tauri-plugin-nspopover = { path = "../../tauri-plugin-nspopover" }
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", branch = "tauri-beta/v2" }
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
cocoa = "0.25.0"
objc = "0.2.7"
accessibility-sys = "0.1.3"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
block = "0.1.6"
serde = "1.0.197"
active-win-pos-rs = "0.8.3"
nanoid = "0.4.0"
objc_id = "0.1.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
