[package]
name = "Snap"
version = "1.4.0"
description = "Macos window manager app"
authors = ["freethinkel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
tauri-plugin-shell = "2"
serde_json = "1.0"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.0" }
# tauri-plugin-nspopover = { path = "../../tauri-plugin-nspopover" }
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2"
cocoa = "0.25.0"
objc = "0.2.7"
accessibility-sys = "0.1.3"
core-foundation = "0.9.4"
core-graphics = "0.23.1"
block = "0.1.6"
serde = "1.0.197"
active-win-pos-rs = "0.8.3"
nanoid = "0.4.0"
objc_id = "0.1.1"
objc2-app-kit = { version = "0.2.2", features = [
  "NSPopover",
  "NSButton",
  "NSColor",
  "NSViewController",
] }
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
tauri-plugin-autostart = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
